# BME280-Simple-Weather-Station

./: .timetracker  README.md  config.json  setup.cfg  test.py
dsws/: __init__.py  config.py  db.py  sensor.py  web_server.py
dsws/web_server/: webserver.py
src/web_server/: db.py
web_interface/: index.html  script.js  style.css
