[metadata]
name = Dead Simple Weather Station
version = 0.0
license = GPL-3.0
description =  A BME280 based, single sensor data collection and display system.
long_description = file: README.md
author = Joshua Jerred
author_email = http://joshuajer.red
classifiers=
   Development Status :: 1 - Planning
   Topic :: Scientific/Engineering :: Atmospheric Science

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   influxdb

[options.packages.find]
where=src